--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -7,3 +7,21 @@
   <strong>Text:</strong>
   <%= @article.text %>
 </p>
+
+<h2>Add a comment:</h2>
+<%= form_with(model: [@article, @article.comments.build], local: true) do |form| %>
+  <p>
+    <%= form.label :commenter %>
+    <%= form.text_field :commenter %>
+  </p>
+  <p>
+    <%= form.label :body %>
+    <%= form.text_field :body %>
+  </p>
+  <p>
+    <%= form.submit%>
+  </p>
+<% end %>
+
+<%= link_to "Back", articles_path %>
+<%= link_to "Edit", edit_article_path %>
