Add tagging functionality

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -22,6 +22,10 @@
     <%= form.text_area :text %>
   </p>
   <p>
+    <%= form.label :tag_list %><br>
+    <%= form.text_field :tag_list %>
+  </p>
+  <p>
     <%= form.submit %>
   </p>
 <% end %>
