--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,6 +2,12 @@
   <strong>Title:</strong>
   <%= @article.title %>
 </p>
+<p>
+  Tags: 
+  <% @article.tags.each do |tag| %>
+    <%= link_to tag.name, tag_path(tag) %>
+  <% end %>
+</p>
  
 <p>
   <strong>Text:</strong>
